syntax = "proto3";

package raftpb;

// Example RequestVote RPC arguments structure.
message RequestVoteArgs {
  uint64 term = 1;
  uint32 candidate_id = 2;
  // Your data here (2A, 2B).
}

// Example RequestVote RPC reply structure.
message RequestVoteReply {
  uint64 term = 1;
  bool vote_granted = 2;
  // Your data here (2A).
}

message AppendEntriesArgs {
  uint64 term = 1;
  uint32 leader_id = 2;
}

message AppendEntriesReply {
  uint32 peer = 1;
  uint64 term = 2;
  bool success = 3;
}